# lelu

./: .all-contributorsrc  .dockerignore  .env.example  .env.vercel.example  .gitignore  .vercelignore  ACTION_PLAN.md  ANONYMOUS_BETA_GUIDE.md  API_KEY_PURPOSE.md  AUTHORIZATION_FLOW.md  Architecture.md  BETA_FIXES_IMPLEMENTED.md  BETA_IMPROVEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_FLOW_COMPLETE.md  DEPLOY_RENDER.md  FINAL-QA-REPORT.md  GITHUB-ISSUE-ADVANCED-OBSERVABILITY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  NPM_MIGRATION_STRATEGY.md  PHASE3_DEPLOYMENT_CHECKLIST.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE3_QUICKSTART.md  POSTMAN.md  README.md  RELEASE_CHECKLIST.md  SETUP_INSTRUCTIONS.md  SQLITE-STORAGE-IMPLEMENTATION.md  STUDIO_REDESIGN.md  docker-compose.production.yml  docker-compose.yml  example-policy.rego  generate-api-key.ps1  install.ps1  install.sh  package-lock.json  (+4 more)
.github/: release-please-config.json  release-please-manifest.json
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  deploy-gcp.yml  deploy-render.yml  docker-publish.yml  keepalive.yml  oss-release.yml  release-please.yml  release.yml  shadow.yml  vercel-deploy.yml
benchmark/: README.md  RESULTS.md  agent_action_benchmark.py  confidence_auroc.py
config/: auth.rego  auth.yaml
config/skills/: payment-guardrail.rego  ticket-triage.rego  tool-call.rego
docs/: CONFIDENCE_AUDITOR.md  PROJECT_PLAN.md  SHADOW_AGENT_DETECTOR.md  aws-bedrock-guardrails.md  demo-record-script.md  lelu-engine-postman.json
docs/linkedin/: diagrams.md
docs/publish/: agentgateway-discussion.md  blog-crewai-tutorial.md  builder-aws-bedrock-article.md  crewai-community-post.md  crewai-docs-page.mdx  crewai-forum-posts.md
engine/: .golangci.yml  CHANGELOG.md  Dockerfile  go.mod  go.sum
engine/cmd/cli/: main.go
engine/proto/: auth.proto
examples/: test-agent-request.json  test-human-request.json
examples/agentgateway/: README.md  agentgateway-extauthz.yaml  lelu-extauthz-adapter.mjs
examples/quickstart/: README.md  demo.sh  policy.yaml
helm/lelu/: values-production.yaml
helm/prism/: Chart.yaml  values-production.yaml  values.yaml
infrastructure/aws/: deploy-ec2.sh  deploy.sh
paper/: README.md  main.tex
platform/: Dockerfile  go.mod  go.sum
platform/ui/: Dockerfile  biome.json  crop_logo.py  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
scripts/: github-setup.sh
sdk/go/: CHANGELOG.md  Dockerfile  README.md  client.go  client_test.go  go.mod  go.sum  observability.go  observability_test.go  storage.go
sdk/mcp/: Dockerfile  package.json  tsconfig.json  tsup.config.ts
sdk/python/: CHANGELOG.md  CLI.md  Dockerfile  README.md  build.sh  pyproject.toml  requirements-test.txt  test_observability.py
sdk/python/auth_pe/: __init__.py  autogpt_plugin.py  client.py  crewai.py  fastapi.py  langchain.py  langgraph.py  middleware.py  models.py  observability.py  storage.py
sdk/python/autogpt_plugin/: plugin_config.json
sdk/python/examples/: langchain_secure_tool.py
sdk/python/lelu/: autogpt_plugin.py  cli.py  fastapi.py  models.py
sdk/python/prism/: __init__.py  client.py  crewai.py  langchain.py  langgraph.py  middleware.py
sdk/python/tests/: test_client.py  test_langchain.py  test_langgraph.py
sdk/typescript/: CHANGELOG.md  CLI.md  LICENSE  README.md  auth-permission-engine-0.1.0.tgz  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/typescript-deprecated/: README.md  index.js  package.json
tests/integration/: shadow_detection_test.go
vscode-extension/prism-vscode/: .vscodeignore  README.md  package-lock.json  package.json  prism-vscode-0.1.0.tgz  tsconfig.json
(+269 files in other folders)
