[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lelu"
version = "0.1.0"
description = "Python SDK for Lelu — the confidence-aware authorization engine for autonomous AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["auth", "authorization", "ai-agents", "langchain", "langgraph", "permissions"]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]
langgraph = [
    "langgraph>=0.1.0",
]
fastapi = [
    "fastapi>=0.111.0",
]

[project.urls]
Homepage = "https://github.com/Abenezer0923/Lelu"
Repository = "https://github.com/Abenezer0923/Lelu"

[tool.hatch.build.targets.wheel]
packages = ["auth_pe", "lelu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
