[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lelu-agent-auth-sdk"
version = "0.0.1"
description = "Python SDK for Lelu — framework-agnostic authorization engine for AI agents with confidence-aware controls, Docker deployment, and human-in-the-loop workflows"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Abenezer Getachew", email = "abenezer.getachew@lelu-ai.com" }
]
maintainers = [
    { name = "Abenezer Getachew", url = "https://github.com/Abenezer0923" }
]
requires-python = ">=3.11"
keywords = ["auth", "authorization", "ai-agents", "langchain", "langgraph", "permissions", "docker", "policy-engine", "human-in-the-loop", "risk-evaluation", "audit-trail", "crewai", "fastapi"]

dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
]

[project.scripts]
lelu = "lelu.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "mypy>=1.10.0",
    "ruff>=0.4.0",
]
langgraph = [
    "langgraph>=0.1.0",
]
fastapi = [
    "fastapi>=0.111.0",
]

[project.urls]
Homepage = "https://lelu-ai.com/"
Repository = "https://github.com/lelu-auth/lelu"

[tool.hatch.build.targets.wheel]
packages = ["auth_pe", "lelu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
